[gd_scene load_steps=7 format=3 uid="uid://bqgrup86gqgh6"]

[ext_resource type="Texture2D" uid="uid://v52gvrta2186" path="res://icons/menu_32dp_E8EAED_FILL0_wght400_GRAD0_opsz40.png" id="1_2wytl"]
[ext_resource type="Script" path="res://main_screen.gd" id="1_vmxgf"]
[ext_resource type="Texture2D" uid="uid://1bs0xkq5qvd3" path="res://icons/restart_alt_32dp_E8EAED_FILL0_wght400_GRAD0_opsz40.png" id="3_p3a7j"]
[ext_resource type="PackedScene" uid="uid://cuenvlwlam2mi" path="res://single_plot.tscn" id="3_w0kuu"]
[ext_resource type="Texture2D" uid="uid://drp4clvqd62yu" path="res://icons/save_32dp_E8EAED_FILL0_wght400_GRAD0_opsz40.png" id="4_n2fy2"]

[sub_resource type="LabelSettings" id="LabelSettings_nix1x"]
font_size = 32

[node name="MainScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vmxgf")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.164706, 0.2, 0.239216, 1)

[node name="Container" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="Content" type="VBoxContainer" parent="Container"]
layout_mode = 2
theme_override_constants/separation = 16
script = ExtResource("1_vmxgf")

[node name="TopBar" type="HBoxContainer" parent="Container/Content"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="MenuBtn" type="Button" parent="Container/Content/TopBar"]
layout_mode = 2
icon = ExtResource("1_2wytl")

[node name="Title" type="Label" parent="Container/Content/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
text = "Coffee Roasting v0.1"
label_settings = SubResource("LabelSettings_nix1x")
horizontal_alignment = 1

[node name="ResetBtn" type="Button" parent="Container/Content/TopBar"]
layout_mode = 2
icon = ExtResource("3_p3a7j")

[node name="SaveBtn" type="Button" parent="Container/Content/TopBar"]
layout_mode = 2
icon = ExtResource("4_n2fy2")

[node name="RoastInfo" type="HBoxContainer" parent="Container/Content"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="NameIn" type="LineEdit" parent="Container/Content/RoastInfo"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
placeholder_text = "Roast Name..."
context_menu_enabled = false
clear_button_enabled = true
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false

[node name="Control" type="Control" parent="Container/Content/RoastInfo"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="DateLbl" type="Label" parent="Container/Content/RoastInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Date: "

[node name="DateOut" type="Label" parent="Container/Content/RoastInfo"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "2001-01-01"

[node name="WgtDetails" type="HBoxContainer" parent="Container/Content"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="GreenWeightLbl" type="Label" parent="Container/Content/WgtDetails"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Green Weight:"

[node name="GreenWeightIn" type="LineEdit" parent="Container/Content/WgtDetails"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "Green Wgt (g)"
context_menu_enabled = false
virtual_keyboard_type = 3
clear_button_enabled = true
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false

[node name="Control" type="Control" parent="Container/Content/WgtDetails"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="RoastWeightLbl" type="Label" parent="Container/Content/WgtDetails"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Roast Weight:"

[node name="RoastWeightIn" type="LineEdit" parent="Container/Content/WgtDetails"]
custom_minimum_size = Vector2(250, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "Roast Wgt (g)"
context_menu_enabled = false
virtual_keyboard_type = 3
clear_button_enabled = true
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false

[node name="RoastResults" type="HBoxContainer" parent="Container/Content"]
layout_mode = 2
alignment = 1

[node name="WgtLossLbl" type="Label" parent="Container/Content/RoastResults"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Weight Loss: "

[node name="WeightLossOut" type="Label" parent="Container/Content/RoastResults"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "00.00%"

[node name="Control" type="Control" parent="Container/Content/RoastResults"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="FirstCrackLbl" type="Label" parent="Container/Content/RoastResults"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "First Crack: "

[node name="FirstCrackOut" type="Label" parent="Container/Content/RoastResults"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "00.00"

[node name="RoastingTimes" type="HBoxContainer" parent="Container/Content"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="StartBtn" type="Button" parent="Container/Content/RoastingTimes"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Start"

[node name="TimerGroup" type="VBoxContainer" parent="Container/Content/RoastingTimes"]
layout_mode = 2

[node name="TimerDisplay" type="Label" parent="Container/Content/RoastingTimes/TimerGroup"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "00:00"
horizontal_alignment = 1
uppercase = true

[node name="TempControls" type="HBoxContainer" parent="Container/Content/RoastingTimes/TimerGroup"]
layout_mode = 2

[node name="AddTempBtn" type="Button" parent="Container/Content/RoastingTimes/TimerGroup/TempControls"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Add Temp"

[node name="TempIn" type="LineEdit" parent="Container/Content/RoastingTimes/TimerGroup/TempControls"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
placeholder_text = "Curr Temp"
context_menu_enabled = false
virtual_keyboard_type = 2
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
drag_and_drop_selection_enabled = false

[node name="FirstCrackBtn" type="Button" parent="Container/Content/RoastingTimes"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "First Crack"

[node name="Calculations" type="HBoxContainer" parent="Container/Content"]
layout_mode = 2
theme_override_constants/separation = 64
alignment = 1

[node name="FifteenLbl" type="Label" parent="Container/Content/Calculations"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "15.0%: 00.00"

[node name="SeventeenLbl" type="Label" parent="Container/Content/Calculations"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "17.5%: 00.00"

[node name="TwentyLbl" type="Label" parent="Container/Content/Calculations"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "20.0%: 00.00"

[node name="TwentyTwoLbl" type="Label" parent="Container/Content/Calculations"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "22.5%: 00.00"

[node name="Development" type="HBoxContainer" parent="Container/Content"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="DevelopmentLbl" type="Label" parent="Container/Content/Development"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "Final Development:"

[node name="DevelopmentOut" type="Label" parent="Container/Content/Development"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "00.00%"

[node name="Results2" type="HBoxContainer" parent="Container/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="SinglePlot" parent="Container/Content" instance=ExtResource("3_w0kuu")]
custom_minimum_size = Vector2(0, 1200)
layout_mode = 2
size_flags_vertical = 3

[connection signal="pressed" from="Container/Content/TopBar/ResetBtn" to="." method="_on_reset_btn_pressed"]
[connection signal="text_changed" from="Container/Content/WgtDetails/RoastWeightIn" to="." method="_on_roast_weight_in_text_changed"]
[connection signal="pressed" from="Container/Content/RoastingTimes/StartBtn" to="." method="_on_start_btn_pressed"]
[connection signal="pressed" from="Container/Content/RoastingTimes/TimerGroup/TempControls/AddTempBtn" to="." method="_on_add_temp_btn_pressed"]
[connection signal="pressed" from="Container/Content/RoastingTimes/FirstCrackBtn" to="." method="_on_first_crack_btn_pressed"]
